# aoc2025py

./: .gitignore  POLARS_NOTES.md  README.md  pyproject.toml
days/: day_00.py  day_01.md  day_01.py  day_02.md  day_02.py  day_03.md  day_03.py  day_04.md  day_04.py  day_05.md  day_05.py  day_06.md  day_06.py  day_07.md  day_07.py  day_08.md  day_08.py  day_09.md  day_09.py  day_10.md  day_10.py
src/aoc_utils/: __init__.py  fetching.py  grid.py  parsing.py  union_find.py
