[project]
name = "aoc2025py"
version = "0.1.0"
description = "Advent of Code 2025 solutions using modern Python data science tools"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Core data science
    "polars>=1.0",
    "jax[cpu]>=0.4",
    "numpy>=2.0",
    # Graph algorithms
    "rustworkx>=0.15",
    # Parsing
    "lark>=1.2",
    # Itertools extensions
    "more-itertools>=10.0",
    # Advent of Code data fetching
    "advent-of-code-data>=2.1",
    # Notebook environment
    "marimo>=0.9",
    "pyzmq>=27.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aoc_utils"]

[tool.marimo.runtime]
auto_instantiate = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
