[project]
name = "aoc2025py"
version = "0.1.0"
description = "Advent of Code 2025 solutions using modern Python data science tools"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Core data science
    "polars>=1.35.2",
    "jax[cpu]>=0.8.1",
    "numpy>=2.3.5",
    # Graph algorithms
    "rustworkx>=0.17.1",
    # Parsing
    "lark>=1.3.1",
    # Itertools extensions
    "more-itertools>=10.8.0",
    # Advent of Code data fetching
    "advent-of-code-data>=2.1.0",
    # Notebook environment
    "marimo>=0.18.2",
    "pyzmq>=27.1.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "ruff>=0.14.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aoc_utils"]

[tool.marimo.runtime]
auto_instantiate = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
